[gd_scene load_steps=5 format=3 uid="uid://diociyuj28rx2"]

[ext_resource type="Script" uid="uid://eyslil0phtkh" path="res://game_objects/bullet/raycast_bullet.gd" id="1_gj4wa"]
[ext_resource type="Script" uid="uid://dik8rk16lw8ip" path="res://components/attack_component/attack_component.gd" id="4_kaok4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n3amb"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.980392)
emission_enabled = true
emission = Color(1, 0, 0, 0.980392)
emission_energy_multiplier = 10.0

[sub_resource type="CylinderMesh" id="CylinderMesh_gksid"]
material = SubResource("StandardMaterial3D_n3amb")
top_radius = 0.1
bottom_radius = 0.1
height = 0.1

[node name="RaycastBullet" type="RayCast3D" groups=["attack"]]
target_position = Vector3(0, 0, -1)
collision_mask = 2
collide_with_areas = true
script = ExtResource("1_gj4wa")
initial_damage = 15.0
pen_rating = 9

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AttackComponent" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_kaok4")
damage = 40.0
armor_penetration_rating = 1

[node name="BeamMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_gksid")

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
